--- a/src/Map/MapSettings/MapSettings.scss
+++ b/src/Map/MapSettings/MapSettings.scss
@@ -4,7 +4,7 @@
   position: absolute;
   bottom: calc(var(--footer-height) + 12px);
   left: 12px;
-  z-index: 1000;
+  z-index: 1100;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
